# QVoiceBridge

./: CMakeLists.txt  LICENSE  README.md  audiolevel.cpp  audiolevel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  whispertranscriber.cpp  whispertranscriber.h
audio/: audiostreamer.cpp  audiostreamer.h
model/: document.h  llamamodel.cpp  llamamodel.h  whispermodel.cpp  whispermodel.h
piper/: phonemize.cpp  piper.hpp
piper/espeak-ng/lib/: libespeak-ng.so.1.52.0.1
piper/espeak-ng/lib/pkgconfig/: espeak-ng.pc
piper/espeak-ng/share/espeak-ng-data/: th_dict
widgets/: frequencyspectrum.cpp  frequencyspectrum.h
